manifests/argocd/argo-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations: 
    kubernetes.io/ingress.class: traefik-internal
    traefik.ingress.kubernetes.io/force-ssl-redirect: "true"
    traefik.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.local.mambalab.live`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argo.local.mambalab.live`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: local-mambalab-live-staging-tls
